docs/api/v2.2.0/index.md
# API Reference

- [DefaultAliasProvider](Xml2Doc.Core.Aliasing.DefaultAliasProvider.md)
- [IAliasProvider](Xml2Doc.Core.Aliasing.IAliasProvider.md)
- [AnchorAlgorithm](Xml2Doc.Core.AnchorAlgorithm.md)
- [DefaultAnchorGenerator](Xml2Doc.Core.Anchoring.DefaultAnchorGenerator.md)
- [IAnchorGenerator](Xml2Doc.Core.Anchoring.IAnchorGenerator.md)
- [AutoLinkContext](Xml2Doc.Core.AutoLinking.AutoLinkContext.md)
- [AutoLinkTarget](Xml2Doc.Core.AutoLinking.AutoLinkTarget.md)
- [IAutoLinker](Xml2Doc.Core.AutoLinking.IAutoLinker.md)
- [SimpleAutoLinker](Xml2Doc.Core.AutoLinking.SimpleAutoLinker.md)
- [DiagnosticIds](Xml2Doc.Core.Diagnostics.DiagnosticIds.md)
- [DiagnosticSeverity](Xml2Doc.Core.Diagnostics.DiagnosticSeverity.md)
- [IDiagnosticSink](Xml2Doc.Core.Diagnostics.IDiagnosticSink.md)
- [Xml2DocDiagnostic](Xml2Doc.Core.Diagnostics.Xml2DocDiagnostic.md)
- [FileNameMode](Xml2Doc.Core.FileNameMode.md)
- [LineEndingStyle](Xml2Doc.Core.LineEndingStyle.md)
- [BaseUrlExternalSymbolResolver](Xml2Doc.Core.Linking.BaseUrlExternalSymbolResolver.md)
- [DefaultLinkResolver](Xml2Doc.Core.Linking.DefaultLinkResolver.md)
- [IExternalSymbolResolver](Xml2Doc.Core.Linking.IExternalSymbolResolver.md)
- [ILinkResolver](Xml2Doc.Core.Linking.ILinkResolver.md)
- [LinkContext](Xml2Doc.Core.Linking.LinkContext.md)
- [LinkPolicy](Xml2Doc.Core.Linking.LinkPolicy.md)
- [MarkdownLink](Xml2Doc.Core.Linking.MarkdownLink.md)
- [MarkdownRenderer](Xml2Doc.Core.MarkdownRenderer.md)
- [LinkMode](Xml2Doc.Core.MarkdownRenderer.LinkMode.md)
- [XMember](Xml2Doc.Core.Models.XMember.md)
- [Xml2Doc](Xml2Doc.Core.Models.Xml2Doc.md)
- [OutputLifecycleExecutor](Xml2Doc.Core.OutputLifecycle.OutputLifecycleExecutor.md)
- [OutputLifecyclePlan](Xml2Doc.Core.OutputLifecycle.OutputLifecyclePlan.md)
- [OutputManifest](Xml2Doc.Core.OutputLifecycle.OutputManifest.md)
- [OutputManifestLocation](Xml2Doc.Core.OutputLifecycle.OutputManifestLocation.md)
- [OutputManifestPlanner](Xml2Doc.Core.OutputLifecycle.OutputManifestPlanner.md)
- [OutputManifestSerializer](Xml2Doc.Core.OutputLifecycle.OutputManifestSerializer.md)
- [OutputManifestStore](Xml2Doc.Core.OutputLifecycle.OutputManifestStore.md)
- [RendererRunMode](Xml2Doc.Core.Pipeline.RendererRunMode.md)
- [RendererRunRequest](Xml2Doc.Core.Pipeline.RendererRunRequest.md)
- [RendererRunResult](Xml2Doc.Core.Pipeline.RendererRunResult.md)
- [RendererRunner](Xml2Doc.Core.Pipeline.RendererRunner.md)
- [SymbolIndex](Xml2Doc.Core.Pipeline.SymbolIndex.md)
- [RendererOptions](Xml2Doc.Core.RendererOptions.md)
- [DefaultSignatureRenderer](Xml2Doc.Core.Signatures.DefaultSignatureRenderer.md)
- [ISignatureRenderer](Xml2Doc.Core.Signatures.ISignatureRenderer.md)
- [SignatureStyle](Xml2Doc.Core.Signatures.SignatureStyle.md)
- [DefaultTemplateRenderer](Xml2Doc.Core.Templates.DefaultTemplateRenderer.md)
- [FileTemplateRenderer](Xml2Doc.Core.Templates.FileTemplateRenderer.md)
- [ITemplateRenderer](Xml2Doc.Core.Templates.ITemplateRenderer.md)
- [TemplateDocumentKind](Xml2Doc.Core.Templates.TemplateDocumentKind.md)
- [TemplateRenderContext](Xml2Doc.Core.Templates.TemplateRenderContext.md)
